Add run config documentation
Document sample run configs for running the seeds and several desktop nodes locally.